# Rukun-AI

backend/service/api/: pyproject.toml
backend/service/api/src/api/: cli.py  server.py
backend/service/api/src/api/infra/: env.py  log.py
frontend/service/ui/app/(tabs)/: _layout.tsx  expenses.tsx  groups.tsx  index.tsx  profile.tsx
