[project]
name = "api"
version = "0.1.0"
description = "Rukun Backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dev = "api.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
